--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "medcare",
+  "name": "trading68",
   "version": "1.0.0",
   "description": "My wondrous Nuxt.js project",
   "author": "pham-k",
